# CLLVM2

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
include/: ast.h  includes.h  lexer.h  options.h  parser.h  token.h
src/: includes.cpp  lexer.cpp  main.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: AST.cpp  parser.cpp
test/: lexer.cpp  parser.cpp
